# queen-shell

./: Cargo.toml
src/: context.rs  deserializer.rs  error.rs  lib.rs  signature.rs
src/cli/: mod.rs
src/commands/: cd.rs  ls.rs  mkdir.rs  mod.rs
src/commands/classified/: external.rs  internal.rs  mod.rs
src/evaluate/: call_info.rs  mod.rs  value.rs
src/parser/: hir.rs  mod.rs  span.rs  syntax_shape.rs  token.rs
src/parser/command/: mod.rs
src/parser/command/classified/: external.rs  internal.rs  mod.rs
src/shell/: mod.rs  std.rs
